# med-trainge-openenv

./: .env.example  .gitignore  .gitkeep  API_KEYS_SETUP.md  CLEAN_REPOSITORY.md  COMPLETE_OPENENV_VERIFICATION.md  Dockerfile  FINAL_AUDIT_REPORT.md  FINAL_CHECKLIST.md  FINAL_SUBMISSION_CHECKLIST.md  FINAL_SUBMISSION_SUMMARY.md  FINAL_SUMMARY.txt  FINAL_VERIFICATION_REPORT.md  HACKATHON_CHECKLIST.py  HACKATHON_READINESS.md  HF_SPACES_DEPLOYMENT.md  HF_SPACE_SYNC.md  INDEX.md  INFERENCE_SPEC_UPDATE.md  LITELLM_PROXY_INTEGRATION.md  PHASE2_COMPLETE_SUMMARY.md  PHASE2_FIX_SUMMARY.md  PRE_VALIDATION_REPORT.md  PROJECT_SUMMARY.md  QUICK_REFERENCE.md  README.md  READY_FOR_SUBMISSION.md  REQUIREMENTS_MET.md  SCORE_RANGE_FIX.md  SPECIFICATION_COMPLIANCE.md  SPEC_COMPLIANCE_FINAL.md  SUBMISSION_CHECKLIST.md  SUBMISSION_GUIDE.md  SUBMISSION_READY.md  SUBMISSION_SUMMARY.md  VERIFICATION_CHECKLIST.md  __init__.py  app_server.py  env.py  episodes_storage.py  (+11 more)
baseline/: __init__.py  agent.py  llm_agent.py
environment/: __init__.py  med_triage_env.py
server/: __init__.py  app.py
tests/: test_env.py
