[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "med-triage-openenv"
version = "1.0.0"
description = "OpenEnv environment for evaluating AI agents on emergency medicine triage"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Med-Triage Team", email = "support@med-triage.dev"}
]
keywords = ["openenv", "reinforcement-learning", "clinical-reasoning", "ER-triage", "AI-agents"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Healthcare"
]

dependencies = [
    "numpy>=1.26.0",
    "pydantic>=2.6.0",
    "groq>=0.4.0",
    "google-generativeai>=0.3.0",
    "requests>=2.31.0",
    "flask>=2.3.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "tqdm>=4.66.0"
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.0",
    "pytest-asyncio==0.21.0",
    "black==23.12.0",
    "isort==5.13.0",
    "flake8==6.1.0"
]
test = [
    "pytest==7.4.0",
    "pytest-asyncio==0.21.0"
]

[project.urls]
Homepage = "https://github.com/nachikethshetty-art/med-trainge-openenv"
Repository = "https://github.com/nachikethshetty-art/med-trainge-openenv.git"
"Bug Tracker" = "https://github.com/nachikethshetty-art/med-trainge-openenv/issues"
Documentation = "https://github.com/nachikethshetty-art/med-trainge-openenv#readme"
"HF Spaces" = "https://huggingface.co/spaces/nachikethshetty/med-trainge"

[tool.setuptools]
packages = ["baseline", "environment", "tests"]
include-package-data = true

[tool.setuptools.package-data]
"" = ["*.yaml", "*.md", "*.txt"]

[tool.black]
line-length = 100
target-version = ["py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | venv
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_mode = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_gitignore = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-v --tb=short"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pylint]
max-line-length = 100
disable = ["C0111", "R0913", "R0914"]

[project.scripts]
med-triage = "inference:main"
med-triage-server = "app_server:main"
