[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "med-trainge-openenv"
version = "1.0.0"
description = "Medical triage simulation environment for emergency medicine decision-making"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Nachiketh Shetty"}
]
keywords = ["openenv", "medical-triage", "emergency-medicine", "rl"]

dependencies = [
    "openenv-core>=0.2.0",
    "openai>=1.3.0",
    "pydantic>=2.0.0",
    "numpy>=1.26.0",
    "flask>=2.3.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
server = "server.app:main"
med-trainge = "server.app:main"
"med-trainge-openenv" = "server.app:main"

[tool.setuptools]
packages = ["environment", "baseline", "server"]

[tool.setuptools.package-data]
environment = ["*.py"]
baseline = ["*.py"]
server = ["*.py"]
